# mouse-recorder-c

./: CMakeLists.txt  main.c
